# minit

./: .gitignore  Cargo.toml  readme.md  readme_en.md
locales/: en.yml  zh.yml
src/: init_basic_items.rs  init_indexes.rs  init_manages_db.rs  init_root_password.rs  init_view_rules.rs  main.rs
